# orby

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
linux/: install.sh  orby.desktop  uninstall.sh
qml/: Main.qml
src/: DiscordApi.cpp  DiscordApi.h  ProcessSpoofer.cpp  ProcessSpoofer.h  ProcessSpoofer_linux.cpp  ProcessSpoofer_windows.cpp  main.cpp
windows/: dummy.cpp
